create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4488,56 +4488,56 @@ body {
     padding-bottom: 2rem;
   }
 }
-.cid-rBAkHcnDGf {
+.cid-rBANn8S1Za {
   padding-top: 15px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-rBAkHcnDGf .form-text {
+.cid-rBANn8S1Za .form-text {
   color: #767676;
 }
 @media (max-width: 767px) {
-  .cid-rBAkHcnDGf .content {
+  .cid-rBANn8S1Za .content {
     text-align: center;
   }
-  .cid-rBAkHcnDGf .content > div:not(:last-child) {
+  .cid-rBANn8S1Za .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-rBAkHcnDGf .img-logo img {
+.cid-rBANn8S1Za .img-logo img {
   height: 6rem;
 }
-.cid-rBAkHcnDGf .form-group,
-.cid-rBAkHcnDGf .input-group-btn {
+.cid-rBANn8S1Za .form-group,
+.cid-rBANn8S1Za .input-group-btn {
   padding: 0;
 }
-.cid-rBAkHcnDGf .form-control {
+.cid-rBANn8S1Za .form-control {
   font-size: .75rem;
   text-align: center;
   min-width: 150px;
 }
-.cid-rBAkHcnDGf .input-group-btn .btn {
+.cid-rBANn8S1Za .input-group-btn .btn {
   padding: .75rem 1.5625rem !important;
   margin-left: .625rem;
   text-transform: none;
   color: #fff;
   text-align: center;
 }
-.cid-rBAkHcnDGf .copyright .mbr-text {
+.cid-rBANn8S1Za .copyright .mbr-text {
   color: #767676;
 }
 @media (max-width: 767px) {
-  .cid-rBAkHcnDGf .footer-lower .copyright {
+  .cid-rBANn8S1Za .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rBAkHcnDGf .footer-lower hr {
+.cid-rBANn8S1Za .footer-lower hr {
   margin: 1rem 0;
   border-color: #000;
   opacity: .05;
 }
-.cid-rBAkHcnDGf .footer-lower .social-list {
+.cid-rBANn8S1Za .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -4547,43 +4547,43 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rBAkHcnDGf .footer-lower .social-list .mbr-iconfont-social {
+.cid-rBANn8S1Za .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #232323;
 }
-.cid-rBAkHcnDGf .footer-lower .social-list .soc-item {
+.cid-rBANn8S1Za .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rBAkHcnDGf .footer-lower .social-list a {
+.cid-rBANn8S1Za .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rBAkHcnDGf .footer-lower .social-list a:hover {
+.cid-rBANn8S1Za .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rBAkHcnDGf .footer-lower .social-list {
+  .cid-rBANn8S1Za .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
 @media (max-width: 767px) {
-  .cid-rBAkHcnDGf .foot-logo {
+  .cid-rBANn8S1Za .foot-logo {
     text-align: center !important;
   }
-  .cid-rBAkHcnDGf .foot-title {
+  .cid-rBANn8S1Za .foot-title {
     text-align: center !important;
   }
-  .cid-rBAkHcnDGf .mbr-text {
+  .cid-rBANn8S1Za .mbr-text {
     text-align: center !important;
   }
-  .cid-rBAkHcnDGf .form-group {
+  .cid-rBANn8S1Za .form-group {
     margin: 0;
   }
 }
-.cid-rBAkHcnDGf .copyright .mbr-text {
+.cid-rBANn8S1Za .copyright .mbr-text {
   text-align: center;
 }
 .cid-rBAgHVdfzk {
